gcc/testsuite/gdc.test/fail_compilation/fail7424f.d
struct S7424f
{
    @property int g()() shared { return 0; }
    void test() { int f = g; }
}

